--- a/RAWunited/bin/RAWunited.dll.config
+++ b/RAWunited/bin/RAWunited.dll.config
@@ -5,37 +5,43 @@
   -->
 <configuration>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
-      <remove name="ChartImageHandler" />
-      <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST"
-        path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <remove name="ChartImageHandler"/>
+      <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
     </handlers>
     <defaultDocument>
-       <files>
-          <add value="index.aspx" />
-       </files>
+      <files>
+        <add value="index.aspx"/>
+      </files>
     </defaultDocument>
   </system.webServer>
   <connectionStrings>
-    <add name="dbCon" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\RAWunited.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <!-- <add name="dbCon" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\RAWunited.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
+    <add name="dbCon" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=college;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;"/>
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
     <httpHandlers>
-      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        validate="false" />
+      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false"/>
     </httpHandlers>
     <pages>
       <controls>
-        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
-          assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
       </controls>
     </pages>
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="true" targetFramework="4.8">
       <assemblies>
         <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
